update tips on blog and fix some padding on smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,10 +30,8 @@ body {
 
 body > div {
   width: 700px;
-  @media only screen and (max-width: 780px) {
-    width: 100%;
-    margin-right: var(--xl-gap);
-    margin-left: var(--xl-gap);
+  @media screen and (max-width: 780px) {
+    padding: 0px var(--xl-gap);
   }
 }
 
