--- a/src/app/projects/page.css
+++ b/src/app/projects/page.css
@@ -53,7 +53,7 @@
     flex-direction: column;
     gap: var(--xl-gap);
 
-    ul {
+    ul, ol {
       padding-left: var(--lg-gap);
     }
   }
